--- a/package.json
+++ b/package.json
@@ -9,15 +9,17 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
     "@expo/webpack-config": "^18.1.2",
     "expo": "^48.0.17",
-    "expo-status-bar": "~1.6.0",
+    "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.72.4",
+    "react-native": "0.71.8",
+    "react-native-elements": "3.4.3",
     "react-native-i18n": "^2.0.15",
-    "react-native-web": "~0.19.6",
-    "react-native-elements": "3.4.3"
+    "react-native-sound": "^0.11.2",
+    "react-native-web": "~0.18.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
