--- a/package.json
+++ b/package.json
@@ -1,25 +1,26 @@
 {
   "name": "hostel82",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
-    "@expo/webpack-config": "^18.1.2",
-    "expo": "^48.0.17",
-    "expo-status-bar": "~1.4.4",
+    "@expo/webpack-config": "^0.12.52",
+    "expo": "^44.0.6",
+    "expo-splash-screen": "^0.10.3",
+    "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.71.8",
+    "react-native": "0.72.3",
+    "react-native-ad-manager": "^2.0.8",
     "react-native-elements": "3.4.3",
     "react-native-i18n": "^2.0.15",
     "react-native-sound": "^0.11.2",
-    "react-native-web": "~0.18.10"
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
